--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   	<!-- OG Info for linking from Discord or other websites -->
 	<meta property="og:title" content="MMBN Chrono X: FAQ" />
 	<meta property="og:description" content="This is the FAQ page for the Megaman Battle Network Chrono X Fangame"/>
-	<meta property="og:image" content="TBA" />
+	<meta property="og:image" content="https://decodedvoid.com/cxfaq/preview.PNG" />
   
   	<!-- Website title and Icon -->
 	<title>MMBN Chrono X: FAQ</title>
