--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
   
   	<!-- Background CSS -->
   	<style type="text/css">
-		html {
-			background: url("background.gif") no-repeat center center fixed; 
-			-webkit-background-size: cover;
-			-moz-background-size: cover;
-			-o-background-size: cover;
-			background-size: cover;
-			height: 100%;
-			overflow: hidden;
+		@media screen and (max-width: 1081px) {
+			html {
+				background: url("background.gif") no-repeat center center fixed; 
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				-o-background-size: cover;
+				background-size: cover;
+				height: 100%;
+				overflow: hidden;
+			}
 		}
 	</style>
 </header>
